trying to fix problem with safari not obeying overflow hidden

--- a/styles/_index.scss
+++ b/styles/_index.scss
@@ -3,6 +3,10 @@ body {
   overflow-x: hidden;
 }
 
+main {
+  overflow-x: hidden;
+}
+
 nav {
   width: 350px;
   height: 100vh;
